# wireshark-smf-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  config.h.in  license.txt  packet-assuredctrl.c  packet-clientctrl.c  packet-matelink.c  packet-pubctrl.c  packet-smf-compress.c  packet-smf.c  packet-smrp.c  packet-xmllink.c  perftool-decoder.h  plugin.c  plugin.rc.in  sdt-decoder.c  smf-analysis.c
.github/workflows/: build_plugin.yml  create_release.yml  macos.yml  macos_arm64.yml  ubuntu.yml  windows.yml
.github/workflows/docs/: wireshark_smf_4-0-x_instructions.md  wireshark_smf_4-2-x_instructions.md  wireshark_smf_4-4-x_instructions.md  wireshark_smf_4-6-x_instructions.md
cmake/: SetupWiresharkSDK.cmake
cmake/scripts/: prepare_sdk_unix.sh  prepare_sdk_win.ps1
docs/: wireshark_smf_4-0-x_instructions.md  wireshark_smf_4-2-x_instructions.md
src/: CMakeListsCustom.txt
src/smf/: CMakeLists.txt  Makefile.am  Makefile.in  moduleinfo.h  packet-assuredctrl.c  packet-clientctrl.c  packet-matelink.c  packet-pubctrl.c  packet-smf-binarymeta.c  packet-smf-compress.c  packet-smf-openmama-payload.c  packet-smf.c  packet-smf.h  packet-smp.c  packet-smrp.c  packet-subctrl.c  packet-xmllink.c  perftool-decoder.c  perftool-decoder.h  plugin.rc.in  sdt-decoder.c  sdt-decoder.h  smf-analysis.c  smf-analysis.h
